add comments for improvements

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[PhD]{iitmdiss}
+\documentclass[PhD]{iitmdiss} %rename iitm to iitism, besides I cannot compile this file unless you push all the style files
 %\documentclass[MS]{iitmdiss}
 %\documentclass[MTech]{iitmdiss}
 %\documentclass[BTech]{iitmdiss}
@@ -22,6 +22,8 @@
 
 \date{August 2023}
 \department{MATHEMATICS AND COMPUTING}
+
+% a logo should go somewhere here
 
 %\nocite{*}
 \maketitle
@@ -47,7 +49,7 @@ diploma.
 \noindent Research Guide \\ 
 \noindent Assistent Professor \\
 \noindent Dept. of Mathematics and computing\\
-\noindent IIT-DHANBAD, 826 004 \\
+\noindent IIT-DHANBAD, 826 004 \\ % it is IIT (ISM) Dhanbad officialy
 } 
 \hspace*{1.0in} 
 %\parbox{2.5in}{
